--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#4d259d</color>
     <color name="colorAccent">#D81B60</color>
     <color name="grey">#A3A3A7</color>
+    <color name="lightGrey">#CCCCCC</color>
+    <color name="darkGrey">#5F5F5F</color>
+
 </resources>
