+implemented Shipping page and google page

--- a/app/src/main/res/layout/twocolumn_custom_listitem.xml
+++ b/app/src/main/res/layout/twocolumn_custom_listitem.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp">
 
     <TextView
         android:id="@+id/heading"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Subtitle"
         android:textStyle="bold" />
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/desc"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="2"
         android:text="Free Shipping | 60 Days Warrenty| #1 customer sercicea blah blah blah" />
 </LinearLayout>
