--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,14 @@
     <color name="colorAccent">#D81B60</color>
     <color name="grey">#A3A3A7</color>
     <color name="lightGrey">#CCCCCC</color>
-    <color name="darkGrey">#5F5F5F</color>
+    <color name="darkGrey">#6B6B6B</color>
+    <color name="Purple">#800080</color>
+    <color name="Red">#ff0000</color>
+    <color name="Silver">#c0c0c0</color>
+    <color name="Turquoise">#40e0d0</color>
+    <color name="Yellow">#ffff00</color>
+    <color name="Green">#00ff00</color>
+    <color name="White">#fff</color>
+
 
 </resources>
