+implemented Similar Items

--- a/app/src/main/res/layout/product_fragment.xml
+++ b/app/src/main/res/layout/product_fragment.xml
@@ -53,7 +53,7 @@
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="300dp">
 
                 <LinearLayout
                     android:id="@+id/productImagesHorizontalView"
