--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#673AB7</color>
     <color name="colorPrimaryDark">#4d259d</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#E64A19</color>
     <color name="grey">#A3A3A7</color>
     <color name="lightGrey">#CCCCCC</color>
     <color name="darkGrey">#6B6B6B</color>
